[project]
name = "rag-from-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.13.0",
    "bitsandbytes>=0.49.2",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pymupdf>=1.27.2",
    "requests>=2.32.5",
    "sentence-transformers>=5.3.0",
    "spacy>=3.8.11",
    "tqdm>=4.67.3",
    "transformers>=5.3.0",
    "wheel>=0.46.3",
]
